@@ -1,0 +1,52 @@
+
+<h1>BUG MEISTER</h1>
+
+The Bug-meister is the human face behind the collection of LilyPond
+bugs.  He (or she, of course) keeps an eye on bugs in LilyPond,
+especially those where LilyPond produces incorrect notation or
+typography.  This is a very important job, since good responses to
+bugreports makes LilyPond look good for struggling users.
+<ul>
+ <li>He will be reading the bug-lilypond and lilypond-user mailing
+    list, replying to bugreporters and distilling small failure cases
+    for each report.
+
+ <li>Every bug goes into a bug-collection.  In the collection for each
+    bug, there is
+<ul>
+    <li>A .ly snippet, trimmed as far as possible.
+
+    <li>An image demonstrating the problem.
+
+    <li>A description of what is wrong.
+
+    <li>Whether the bug concerns a new feature, or breaks existing
+       features.
+
+    <li>If the latter, the version number where the bug started
+       manifesting.
+
+    <li>The severity of the bug: a bug should get priority if it causes
+       crashes, when there are no workarounds, or if it affects a large
+       number of people.
+</ul>
+ <li>Periodically (say, every week), the bug-collection is run through
+    LilyPond to determine which problems are still open.
+
+ <li>Some bugs, when fixed, should be added as a regression test.
+
+ <li>Of course, the bug-meister will pester developers to fix serious
+    bugs.
+</ul>
+
+An example of excellent bug-reports is the bug-collection of Werner
+Lemberg, see for example
+<a
+href="http://mail.gnu.org/archive/html/lilypond-devel/2004-03/msg00138.html">
+http://mail.gnu.org/archive/html/lilypond-devel/2004-03/msg00138.html</a>
+
+
+<p>
+
+<b>REQUIREMENTS</b> read email regularly, so bugreports are replied to in a
+timely fashion.
