@@ -1,0 +1,18 @@
+<h1>BUILD-MEISTER</h1>
+
+The responsibility of the build-meister it is to make sure that binary
+packages of LilyPond are available for all platforms.
+<p>
+To this end, the build-meister
+<ul>
+ <li>Regularly (say, once a week) packages LilyPond CVS for one
+    platform.  This is to check for bugs in the installation procedure.
+
+ <li>Tries to find people that will build LilyPond packages for other
+    platforms, either for releases or from CVS.
+
+ <li>Tries to convince vendors (Fedora, Mandrake, etc.)  to put lily in
+    their base distributions.
+
+ <li>Maintains the lilypond.org/download/ page.
+</ul>
