@@ -1,0 +1,22 @@
+The
+<h1>
+DOCUMENTATION EDITOR
+</h1>
+eases LilyPond's learning curve by improving the manual.
+Specifically, the documentation editor will
+<ul>
+ <li>Read the mailing lists, and analyze how confused users could be
+    helped better by the manual.
+
+ <li>Take questions and answers from the mailing list, and rewrite them
+    to fit in the manual.
+
+ <li>Edit the manual for spelling, grammar, clarity etc.
+
+ <li>Maintain style standards for the manual.
+</ul>
+
+<h2>REQUIREMENTS</h2>
+
+This is a job best suited to a native English speaker with affinity
+for technical writing.
