@@ -1,0 +1,24 @@
+
+
+<pre>
+I thought it would be neat if we could help aspiring LilyPond users
+select the best environment for them to work in. I think that newbie
+users would be helped a lot if there were a webpage that lists
+
+* all text-editors with LilyPond support
+(emacs, vim, jedit, ... ? )
+
+* all (MIDI) keyboard entry  utilities
+(rumor, lyqi, ? )
+
+* all GUIs with LilyPond support
+(rosegarden, denemo, noteedit, .. ?)
+
+* all formats where we have conversion utilites (abc, etf, ..  ?)
+
+such a page would briefly discuss each solution, show a couple of nice
+screenshots, and explain what platforms it runs, where to get more
+information and where to download the stuff.
+
+Is there anyone who would like to create such an overview?
+</pre>
