@@ -1,0 +1,24 @@
+
+The lilypond website does a nice job of giving an idea of LilyPond's
+capabilities. Unfortunately, it is hard to explain some of the more
+advanced features in just a few words. For example, LilyPond does not
+have part extraction, but rather a much more powerful mechanism:
+part-combining and automatic cue notes.
+
+<p>
+ What we really need is a separate page documenting this feature, with
+a few short examples and/or screenshots. The page should be
+<ul>
+<li> attractive
+<li> understandable for non-LilyPond users
+<li> explain the benefits and advantages of this feature
+<li> point into the documentation
+<li> if applicable, give some advanced tips 
+</ul>
+
+<p>
+The mozilla.org pages about <a
+href="http://www.mozilla.org/products/firefox/live-bookmarks.html">
+Live bookmarks</a> and <a
+href="http://www.mozilla.org/products/firefox/tabbed-browsing.html">
+tabbed browsing</a> are examples what we want.
