@@ -1,0 +1,24 @@
+
+
+<h1>RELEASE-MEISTER</h1>
+
+The job of the release-meister is to coordinate releases.  Ideally,
+they would happen less frequently than they do now --perhaps once a
+month-- but offer a better quality.
+<p>
+LilyPond is ready for a release when
+<ul>
+
+ <li>The regression test comes out clean
+
+ <li>All features work as documented 
+
+ <li>A new release would offer an improvement over the last one
+</ul>
+
+The release-meister keeps an eye on the bugreports and ChangeLog, and
+has the responsibility to decide when a release is in order.
+<p>
+The actual mechanics entail branching CVS, pestering developers for
+important bug-fixes, creating and uploading the tarball, announcing it
+on mailing lists, websites, etc.
