@@ -1,3 +1,14 @@
+2004-10-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* site/devel/participating/editors.html: new page.
+
+	* site/devel/participating/feature-page.html (href): new page
+	
+
+	* site/devel/participating/call-for-help.html: revise, split out
+	tasks.
+	
+
 2004-10-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* site/switch/advantages.html (src): revise.
